stacks/calico_rules/templates/10-e-deny-ec2metadata.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: 10-e-deny-ec2metadata
spec:
  order: 10
  selector: projectcalico.org/namespace != "kube-system" && projectcalico.org/namespace != "custom-metrics"
  types:
  - Egress
  egress:
  - action: Log
    metadata: {}
    protocol: TCP
    destination:
      ports:
        - 80
        - 443
      nets:
        - 169.254.169.254/32
  - action: Deny
    metadata: {}
    protocol: TCP
    destination:
      ports:
        - 80
        - 443
      nets:
        - 169.254.169.254/32
